example/lib/src/arbs/errors/app_bg.arb
{
  "@@locale": "bg",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Възникна грешка",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Настъпи неочаквана грешка",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Баг репортът е изпратен успешно.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}